firmware/lib/control-table/tests/ui/repr_packed_n.stderr
error: Block derive forbids #[repr(packed)] (unaligned reads + offset_of are unsound)
 --> tests/ui/repr_packed_n.rs:3:11
  |
3 | #[repr(C, packed(2))]
  |           ^^^^^^^^^
